# zap

./: .gitignore  .gitmodules  CONTRIBUTING.en.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  LICENSE  README.md  blazingly-fast.md  build.zig  build.zig.zon  build.zig.zon.localhost  build_all.sh  create-archive.sh  flake.nix  introducing.md  precommit-hook.sh  shell.nix  targets.txt
facil.io/: .clang_complete  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LIBRARIES.md  LICENSE  NOTICE  README.md  build.zig  build.zig.zon  flake.nix  makefile
facil.io/examples/: http-chat.c  http-hello.c  http_client.c  raw-chat.c  raw-client.c  raw-echo.c  raw-http.c
facil.io/examples/benchmarks/: websocket_shootout.c
facil.io/examples/boiler_plate/: README.md
facil.io/examples/boiler_plate/src/: cli.c  cli.h  http_service.c  http_service.h  main.c  main.h
facil.io/lib/facil/: fio.c  fio.h
facil.io/lib/facil/cli/: fio_cli.c  fio_cli.h
facil.io/lib/facil/fiobj/: README.md  fio_json_parser.h  fio_siphash.c  fio_siphash.h  fio_tmpfile.h  fiobj.h  fiobj4fio.h  fiobj_ary.c  fiobj_ary.h  fiobj_data.c  fiobj_data.h  fiobj_hash.c  fiobj_hash.h  fiobj_json.c  fiobj_json.h  fiobj_mustache.c  fiobj_mustache.h  fiobj_numbers.c  fiobj_numbers.h  fiobj_str.c  fiobj_str.h  fiobject.c  fiobject.h  mustache_parser.h
facil.io/lib/facil/http/: README.md  http.c  http.h  http1.c  http1.h  http_internal.c  http_internal.h  websockets.c  websockets.h
facil.io/lib/facil/legacy/: fio_mem.c  fio_mem.h
facil.io/lib/facil/redis/: redis_engine.c  redis_engine.h  (+1 more)
facil.io/scripts/: build  clean  debug  lib-dump
facil.io/scripts/new/: app  cleanup
facil.io/src/: fio_zig.c
facil.io/tests/: collisions.c  malloc_speed.c  memchr_speed.c  mustache.c.h  parse_url.c  random.c  redis_cmd.c  slowloris.c  tests.c
tools/announceybot/: announceybot.py  generate_releasenotes.py  pyproject.toml  release-announcement-template.md  release-dep-update-template.md  release-note-template.md  update_readme.py
wrk/cpp/: CMakeLists.txt  build.zig  build.zig.zon  hello.html  main.cpp
(+159 files in other folders)
