[tool.poetry]
name = "announceybot"
version = "0.1.0"
description = ""
authors = ["Rene Schallner <rene@renerocks.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.11"
discord-webhook = "^1.1.0"
gitpython = "^3.1.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
